# hangman-bench

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
analysis/: .gitignore  README.md  bin_difficulty.py  cost_estimation.py  difficulty_binned.tsv  difficulty_binned_freq.tsv  difficulty_report.tsv  extract_wordlist.py  hangman_bench_experimental_plan.ipynb  ingest_simulation.py  measure_difficulty.py  reclassified_from_coverage.py  reclassified_from_freq.py  reclassified_words.tsv  reclassify_words.py  wordlist.txt  zen_hangman.py
examples/: basic_usage.py
src/hangman_bench/: datasets.py  hangman.py
src/hangman_eval/: __init__.py  datasets.py  hangman.py
tests/: conftest.py  test_e2e_hangman.py  test_hangman.py
