[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hangman-eval"
version = "0.1.0"
description = "Hangman game evaluation for AI models"
authors = [{ name = "Matt Fisher" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["inspect_ai@git+https://github.com/UKGovernmentBEIS/inspect_ai"]
license = { text = "MIT" }

[project.entry-points.inspect_ai]
hangman_eval = "hangman_eval"

[project.optional-dependencies]
dev = ["ruff>=0.12.0", "pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
"Homepage" = "https://github.com/MattFisher/hangman-eval"
"Bug Tracker" = "https://github.com/MattFisher/hangman-eval/issues"
