[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hangman-bench"
version = "0.1.0"
description = "Hangman game benchmark for AI models"
authors = [{ name = "Matt Fisher" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = ["inspect_ai@git+https://github.com/UKGovernmentBEIS/inspect_ai"]
license = { text = "MIT" }

[project.entry-points.inspect_ai]
hangman_bench = "hangman_bench"

[project.optional-dependencies]
dev = ["ruff>=0.12.0", "pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
"Homepage" = "https://github.com/MattFisher/hangman-bench"
"Bug Tracker" = "https://github.com/MattFisher/hangman-bench/issues"
